--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -68,7 +69,7 @@
     "@types/react-dom": "^18",
     "dotenv": "^17.2.3",
     "genkit-cli": "^1.20.0",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
